docs(api): produced documentation of users endpoints
