# api-service/api/src/routes/user.route.ts
@@ -23,8 +23,8 @@ const API_LIMITER_RULES: ApiLimiterEntry = {
             limit: 5
         },
         "POST": {
-            time: 80,
-            limit: 1
+            time: 10,
+            limit: 10
         }
     },
 }
@@ -34,28 +34,120 @@ const limitStorage = new RedisLimiterStorage();
 userRouter.use(apiLimiter(API_LIMITER_RULES, limitStorage));
 
 /**
- * Retrieve the information of a user
+ * @openapi
+ *
+ * paths:
+ *   /users/{userEmail}:
+ *      get:
+ *          summary: Return a specific user
+ *          parameters:
+ *              - name: userEmail
+ *                in: path
+ *                description: The email of the user to get the info from.
+ *                required: false
+ *                schema:
+ *                  type: string
+ *          responses:
+ *              '200':
+ *                  description: Request accepted successfully.
+ *              '429':
+ *                  description: Limit of requests reached for this endpoint.
+ *              '500':
+ *                  description: Generic server error
+ *
  */
 userRouter.get("/:email", authenticationHandler, getProfile);
 
 userRouter.get("/", authenticationHandler, getProfile);
 
-/** 
- * Update the information of a user
+/**
+ * @openapi
+ *
+ * paths:
+ *   /users/{userEmail}:
+ *      put:
+ *          summary: Update a specific user
+ *          parameters:
+ *              - name: userEmail
+ *                in: path
+ *                description: The email of the user to update.
+ *                required: false
+ *                schema:
+ *                  type: string
+ *          responses:
+ *              '200':
+ *                  description: Request accepted successfully.
+ *              '429':
+ *                  description: Limit of requests reached for this endpoint.
+ *              '500':
+ *                  description: Generic server error
+ *
  */
 userRouter.put("/:email", authenticationHandler, editProfile);
 
 userRouter.put("/", authenticationHandler, editProfile);
 
 /**
- * Delete a user from the system
+ * @openapi
+ *
+ * paths:
+ *   /users/{userEmail}:
+ *      delete:
+ *          summary: Delete a specific user
+ *          parameters:
+ *              - name: userEmail
+ *                in: path
+ *                description: The email of the user to delete.
+ *                required: false
+ *                schema:
+ *                  type: string
+ *          responses:
+ *              '200':
+ *                  description: Request accepted successfully.
+ *              '429':
+ *                  description: Limit of requests reached for this endpoint.
+ *              '500':
+ *                  description: Generic server error
+ *
  */
 userRouter.delete("/:email", authenticationHandler, deleteProfile);
 
 userRouter.delete("/", authenticationHandler, deleteProfile);
 
 /**
- * Create a new user.
+ * @openapi
+ *
+ * paths:
+ *   /users:
+ *      post:
+ *          summary: Create a new user
+ *          requestBody:
+ *              required: true
+ *              content:
+ *                  application/json:
+ *                      schema:
+ *                          type: object
+ *                          properties:
+ *                              email:
+ *                                  type: string
+ *                                  description: The email of the user
+ *                              password:
+ *                                  type: string
+ *                                  description: The password of the user, this will be encrypted.
+ *                              firstName:
+ *                                  type: string
+ *                                  description: The first name of the user.
+ *                              secondName:
+ *                                  type: string
+ *                                  description: The second name of the user.
+ *          responses:
+ *              '201':
+ *                  description: The new user is created.
+ *              '429':
+ *                  description: Limit of requests reached for this endpoint.
+ *              '500':
+ *                  description: Generic server error
+ *
  */
 userRouter.post("/", createUser);
 
